@@ -655,6 +655,7 @@ Brian Merrell
 Luke Mewburn
 Carl Meyer
 Mike Meyer
+Piotr Meyer
 Steven Miale
 Trent Mick
 Tom Middleton
@@ -685,7 +686,7 @@ Sape Mullender
 Michael Muller
 Neil Muller
 R. David Murray
-Piotr Meyer
+Matti Mäki
 Dale Nagata
 John Nagle
 Takahiro Nakayama
